assets/css/style.css
/* ... */
.no-svg .blog-summary.link-post h1:before {
	background-image: url(/components/assets/img/icon_compass.png);
}

.blog-summary.link-post p {
	/* font-family: "Franklin ITC Light", sans-serif; */
}

.blog-summary.native-post .byline {
	font-size: 18px;
	font-style: italic;
}

.blog-summary.native-post .byline a.author,
.entry-details a.author,
.meta a.author,
.blog-summary.native-post .byline a.aside-author,
.entry-details a.aside-author,
.meta a.aside-author {
	font-family: "Franklin ITC", sans-serif;
	font-style: normal;
}

.item-summary {
	display: inline-block;
	vertical-align: top;
	width: 216px;
	margin: 0 24px 24px 0;
}

.item-summary.columnist {
	width: 49%;
	width: calc(50% - 3px);
	margin: 0;
}

.item-summary:nth-child(even) {
	padding: 0 12px 24px 0;
}

.item-summary:nth-child(odd) {
	padding: 0 0 24px 12px;
}

aside.column.more-content .item-summary {
	padding-left: 0;
}

.secondary-column .item-summary:nth-child(odd) {
	padding-left: 0;
}

.item-summary:nth-of-type(4n) {
	margin-right: 0;
}

.item-summary .column-summary-header {
	margin-bottom: 18px;
	text-align: center;
}

.item-summary .column-summary-header h1 {
	font-family: "Franklin ITC", sans-serif;
	font-weight: bold;
	font-size: 24px;
}

.item-summary .column-summary-header .meta {
	font-size: 14px;
}

.item-summary .column-summary-header + p {
	margin-bottom: 18px;
	font-size: 18px;
	line-height: 27px;
}

.secondary-column .item-summary,
.more-content .item-summary {
	width: auto;
}

.more-content .item-summary {
	margin-right: 0;
}

.item-summary.article img {
	position: relative;
	top: 6px;
	display: block;
	float: left;
	margin: 0 6px 12px 0;
	border-radius: 50%;
	border: .5em solid #f5f5f5;
}

.item-summary.article.columnist img {
	position: static;
	display: block;
	float: none;
	margin: 0 auto 12px;
	border-radius: 50%;
	border: .5em solid #f5f5f5;
}

.item-summary.article.columnist img.restrain {
	width: 96px;
	height: 96px;
	-moz-box-sizing: content-box;
	-webkit-box-sizing: content-box;
	box-sizing: content-box;
}

.item-summary.article .column-name {
	margin-bottom: 4px;
	font-size: 12px;
	line-height: 16px;
}

.item-summary.article .event-role,
.event-details .logistics h2 {
	margin-bottom: 4px;
	font-size: 14px;
	line-height: 16px;
	color: #bb3825;
	font-family: "Franklin ITC", sans-serif;
	text-transform: uppercase;
	font-weight: 600;
}

.event-details .logistics h2:first-of-type {
	margin-top: 9px;
}

.event-details {
	float: right;
	width: 250px;
}

.event-details .logistics {
	display: block;
	margin-bottom: 48px;
	font-family: "Franklin ITC Light", sans-serif;
	font-weight: normal;
	text-align: center;
	line-height: 24px;
	font-size: 16px;
}

.event-details .logistics span {
	display: block;
	padding: 0 24px;
}

.event-details .logistics span.register-link a {
	font-size: 14px;
}

.event-details .logistics span + h2 {
	margin-top: 36px;
}

.event-details .logistics span.big-number {
	font-size: 84px;
	line-height: .9em;
}

.logistics-block {
	margin-bottom: 2em;
}

.logistics-block.bordered {
	padding-top: 24px;
	border-top: 1px solid #eee;
}

.logistics-block:last-of-type {
	margin-bottom: 0;
}

.sponsor-block {
	font-family: "Franklin ITC Light", sans-serif;
	font-weight: normal;
	text-align: center;
	border-top: 1px solid #eee;
}

.sponsor-block .sponsor-label {
	display: block;
	margin: -14px 48px 12px;
	background: #fff;
	border: 1px solid #eee;
	border-radius: 6px;
	font-size: 14px;
	font-family: "Franklin ITC", sans-serif;
	line-height: 24px;
}

.col-holder + .bsap .sponsor-block {
	margin-top: 70px;
	margin-bottom: 70px;
}

.col-holder + .bsap .sponsor-block img {
	margin-bottom: 24px;
}

.col-holder + .bsap .sponsor-block p {
	width: 670px;
	max-width: 100%;
	margin: 0 auto;
	padding-left: 12px;
	padding-right: 12px;
}

.col-holder + .bsap .sponsor-block .sponsor-label {
	max-width: 280px;
	margin-right: auto;
	margin-left: auto;
}

.event-details .sponsor-block img {
	display: block;
	margin: 0 auto 12px;
}

.sponsor-block h2,
.sponsor-block h3 {
	font-weight: bold;
	margin: 18px 0 0;
}

.event-details .sponsor-block p {
	margin-bottom: 6px;
	padding: 0 24px;
	font-size: 14px;
	line-height: 24px;
}

.event-details + .event-copy {
	margin-right: 250px;
	border-right: 1px solid #eee;
	padding-right: 24px;
}

.event-copy .event-details {
	border-left: 1px solid #eee;
	margin-left: 24px;
}

.event-copy .event-details .logistics-block {

}

.arrow-link:after {
	content: " ›";
}

.event-copy h2 {
	font-family: "Franklin ITC", sans-serif;
	font-weight: bold;
	font-style: normal;
	font-size: 24px;
	line-height: 30px;
	color: #ba3925;
	margin-top: 36px;
	margin-bottom: 12px;
}

.event-copy p {
	margin-bottom: 24px;
}

.event-copy.no-video p:first-child {
	font-size: 24px;
	line-height: 36px;
}

.event-copy ul {
	margin-bottom: 24px;
}

.event-copy ul li {
	margin-left: 24px;
	list-style-type: disc;
}

.event-copy ul.people-list li {
	margin-left: 0;
	margin-bottom: 12px;
	list-style-type: none;
	overflow: auto;
	line-height: 1.3em;
}

.event-copy ul.people-list li img {
	display: block;
	float: left;
	margin-right: 12px;
	border-radius: 50%;
	width: 60px;
	height: 60px;
	border: .4em solid #f5f5f5;
	-moz-box-sizing: content-box;
	-webkit-box-sizing: content-box;
	box-sizing: content-box;
}

.event-copy ul.people-list li a.name-link, .event-copy ul.people-list li .name {
	display: inline-block;
	padding-top: 12px;
	font-family: "Franklin ITC", sans-serif;
	font-weight: bold;
}

.event-copy ul.people-list li span {
	display: block;
}

.item-summary.article > h1 {
	margin-bottom: 2px;
	font-size: 18px;
	line-height: 24px;
}

.item-summary:not(.article) > h1 {
	/* font-size: 14px;
	line-height: 18px;
	font-style: italic; */
	font-size: 18px;
	line-height: 24px;
	line-height: 24px;
}

.item-summary:not(.topic) > h1 a {
	color: #222;
}

.item-summary.topic > h1 a {
	padding-right: 4px;
	font-family: "Franklin ITC", sans-serif;
	font-weight: bold;
	font-style: normal;
	/* text-transform: uppercase; */
}
/* ... */

